--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,28 @@
 {% extends "base_auth.html" %}
 {% block content %}
-<h4 class="mb-4">Acesse sua conta</h4>
+<h4 class="mb-4 text-center">Acesse sua conta</h4>
 
-<form method="POST" action="">
+<form method="POST" action="{{ url_for('main.login', next=request.args.get('next')) }}">
     <div class="mb-3">
-        <input type="text" class="form-control" name="username" placeholder="Usuário" required>
+        <input 
+            type="text" 
+            class="form-control" 
+            name="username" 
+            placeholder="Usuário" 
+            value="{{ request.form.username or '' }}" 
+            required
+        >
     </div>
     <div class="mb-3">
-        <input type="password" class="form-control" name="password" placeholder="Senha" required>
+        <input 
+            type="password" 
+            class="form-control" 
+            name="password" 
+            placeholder="Senha" 
+            required
+        >
     </div>
-    <button type="submit" class="btn btn-login">
+    <button type="submit" class="btn btn-login w-100">
         Entrar
     </button>
 </form>
@@ -18,7 +31,9 @@
   {% if messages %}
     <div class="mt-3">
       {% for category, message in messages %}
-        <div class="alert alert-{{ category }} py-1 my-1">{{ message }}</div>
+        <div class="alert alert-{{ category }} py-1 my-1 text-center">
+          {{ message }}
+        </div>
       {% endfor %}
     </div>
   {% endif %}
